--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,9 +1,9 @@
 <div class="pagination">
     {{#if prev}}
-    <a class="page-link page-prev" href="{{page_url prev}}">&larr; Newer Posts</a>
+    <a class="page-link page-prev" href="{{page_url prev}}">&larr; newer posts</a>
     {{/if}}
-    <span class="page-number">Page {{page}} of {{pages}}</span>
+    <span class="page-number">page {{page}} of {{pages}}</span>
     {{#if next}}
-    <a class="page-link page-next" href="{{page_url next}}">Older Posts &rarr;</a>
+    <a class="page-link page-next" href="{{page_url next}}">older posts &rarr;</a>
     {{/if}}
 </div>
