--- a/tag.hbs
+++ b/tag.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 {{#tag}}
-<p>Posts tagged under <span class="tag">{{name}}</span></p>
+<p>posts tagged under <span class="post-tag">{{name}}</span></p>
 {{/tag}}
 <hr>
 
